--- a/.github/workflows/Windows 10 - RustDesk.yml
+++ b/.github/workflows/Windows 10 - RustDesk.yml
@@ -1,14 +1,15 @@
 name: Windows - RustDesk
 
 on:
-  workflow_dispatch:
+  schedule:
+    - cron: '*/15 * * * *'  # Runs every 15 minutes (adjust as needed)
 
 jobs:
   build:
     name: Start Building...
-    runs-on: windows-latest
-    timeout-minutes: 9999
-    
+    runs-on: self-hosted  # Use the label of your self-hosted runner here
+    timeout-minutes: 9999  # Set a timeout to avoid job cancellation (24 hours)
+
     steps:
       - name: Downloading & Installing Essentials
         run: |
@@ -18,5 +19,6 @@ jobs:
       - name: Log In To AnyDesk
         run: cmd /c show.bat
 
-      - name: Time Counter
-        run: python time.py
+      - name: Run Python script
+        run: |
+          python time.py  # Replace with your Python script name
