--- a/.github/workflows/Windows 10 - RustDesk.yml
+++ b/.github/workflows/Windows 10 - RustDesk.yml
@@ -1,15 +1,14 @@
 name: Windows - RustDesk
 
 on:
-  schedule:
-    - cron: '*/15 * * * *'  # Runs every 15 minutes (adjust as needed)
+  workflow_dispatch:
 
 jobs:
   build:
     name: Start Building...
-    runs-on: self-hosted  # Use the label of your self-hosted runner here
-    timeout-minutes: 9999  # Set a timeout to avoid job cancellation (24 hours)
-
+    runs-on: windows-latest
+    timeout-minutes: 9999
+    
     steps:
       - name: Downloading & Installing Essentials
         run: |
@@ -19,6 +18,5 @@ jobs:
       - name: Log In To AnyDesk
         run: cmd /c show.bat
 
-      - name: Run Python script
-        run: |
-          python time.py  # Replace with your Python script name
+      - name: Time Counter
+        run: python time.py
